master
------

	* PycURL will no longer call `curl-config --static-libs` if
	  `curl-config --libs` succeeds and returns output.
	  Systems on which neither `curl-config --libs` nor
	  `curl-config --static-libs` do the right thing should provide
	  a `curl-config` wrapper that is sane.
	  

	* Added CURLFORM_BUFFER and CURLFORM_BUFFERPTR.

	* pycurl.version and user agent string now include both
	  PycURL version and libcurl version as separate items.

	* Added CURLOPT_DNS_SERVERS.

	* PycURL can now be dynamically linked against libcurl on Windows
	  if PYCURL_USE_LIBCURL_DLL is #defined during compilation.

	* Breaking change: opensocket callback now takes an additional
	  (address, port) tuple argument. Existing callbacks will need to
	  be modified to accept this new argument.
	  https://github.com/pycurl/pycurl/pull/18

Version 7.19.0.2 [requires libcurl-7.19.0 or better] - 2013-10-08
-----------------------------------------------------------------

	* Fixed a bug in a commit made in 2008 but not released until 7.19.0.1
	  which caused CURLOPT_POSTFIELDS to not correctly increment reference
	  count of the object being given as its argument, despite libcurl not
	  copying the data provided by said object.

	* Added support for libcurl pause/unpause functionality,
	  via curl_easy_pause call and returning READFUNC_PAUSE from
	  read callback function.

Version 7.19.0.1 [requires libcurl-7.19.0 or better] - 2013-09-23
-----------------------------------------------------------------

	* Test matrix tool added to test against all supported Python and
	  libcurl versions.

        * Python 2.4 is now the minimum required version.

        * Source code, bugs and patches are now kept on GitHub.

        * Added CURLINFO_CERTINFO and CURLOPT_CERTINFO.

        * Added CURLOPT_RESOLVE.

        * PycURL can now be used with Python binaries without thread
          support.

        * gcrypt is no longer initialized when a newer version of gnutls
          is used.
